--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
+    "version": 2,
     "builds": [
       {
-        "src": "api/app.py",
-        "use": "@vercel/python"
+        "src": "build.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "."
+        }
       }
     ],
     "routes": [
@@ -12,4 +16,3 @@
       }
     ]
   }
-  
