--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "build.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "."
-        }
+        "src": "api/app.py",
+        "use": "@vercel/python"
       }
     ],
     "routes": [
